--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body{
-    font-family: "PT Sans Narrow";
+    font-family: sans-serif;
+    background-image: url(bg.jpg);
+    font-weight:bold;
+    opacity: 0.7;
+    color: yellow;
 }
 
 .navbar{
@@ -16,9 +20,36 @@ body{
 }
 
 header {
-    background-image: url(flowerofthemonthclub.jpg);
-    height: 600px;
-    width: 100%;
+    margin-top: 100px;
+    margin-left: 100px;
+    height: 400px;
+    width: 500px;
     background-size: cover;
-    text-align: center;
+    text-align: left;
+    background-color: white;
+}
+
+h1{
+    font-size: 72px;
+}
+p{
+    font-size: 35px;
+}
+button{
+    margin-left: 100px;
+}
+
+.services i{
+    font-size: 30px;
+    padding:25px 20px;
+    color:#fff;
+    background-color:blue;
+    width:80px;
+    height:80px;
+    border-radius: 50%;
+}
+
+.services span{
+     width:200px;
+     display: inline-block;
 }
