Team and Contact Page

--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body{
     font-family: sans-serif;
     background-image: url(bg.jpg);
     font-weight:bold;
-    opacity: 0.7;
-    color: yellow;
+    opacity: 1.0;
+    color: cyan;
 }
 
 .navbar{
@@ -29,9 +29,7 @@ header {
     background-color: white;
 }
 
-h1{
-    font-size: 72px;
-}
+
 p{
     font-size: 35px;
 }
@@ -52,4 +50,47 @@ button{
 .services span{
      width:200px;
      display: inline-block;
+}
+
+img{
+    height: 200px;
+    width: 200px;
+}
+
+h1{
+    font-size: 35px;
+}
+
+h3{
+    font-size: 24px;
+}
+
+p{
+    font-size:13px;
+}
+
+.team img{
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+section{
+    text-align: center;
+}
+
+.title{
+    font-size: 50px;
+}
+
+.contact i{
+    padding-top: 10px;
+    padding-right: 15px;
+}
+
+.contact button{
+    width: 100%;
+}
+
+.contact button:hover{
+    background-color: red;
 }
